<resources>
    <string name="app_name">Assignment 1</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="generate_button_label">Generate Random Pattern</string>
    <string name="practice">Toggle Practice Mode</string>
    <string name="Designer">Personal Pattern Designer</string>
    <string name="start_log_data">Start Logging</string>
    <string name="stop_log_data">Save Data</string>
    <string name="pattern1_button_label">1</string>
    <string name="pattern2_button_label">2</string>
    <string name="pattern3_button_label">3</string>
    <string name="pattern4_button_label">4</string>

</resources>
